Fixed input alignment

--- a/src/app/fyle/add-edit-advance-request/add-edit-advance-request.page.scss
+++ b/src/app/fyle/add-edit-advance-request/add-edit-advance-request.page.scss
@@ -124,7 +124,7 @@
     line-height: 2;
     white-space: nowrap;
     display: flex;
-    min-width: 120px;
+    min-width: 145px;
     &__invalid {
       color: red;
     }
@@ -136,6 +136,7 @@
     font-weight: 500;
     line-height: 1.5;
     height: 24px;
+    max-width: calc(100% - 145px);
   }
 
   &--checkbox {
