--- a/src/app/fyle/add-edit-advance-request/fy-select-project/fy-select-project.component.scss
+++ b/src/app/fyle/add-edit-advance-request/fy-select-project/fy-select-project.component.scss
@@ -8,6 +8,7 @@
     font-weight: 500;
     line-height: 1.5;
     white-space: nowrap;
+    min-width: 145px;
     &__invalid {
       color: red;
     }
