--- a/src/app/fyle/my-add-edit-trip/my-add-edit-trip.page.scss
+++ b/src/app/fyle/my-add-edit-trip/my-add-edit-trip.page.scss
@@ -70,7 +70,7 @@ $item-border-color: #e0e0e0;
     line-height: 2;
     white-space: nowrap;
     display: flex;
-    min-width: 120px;
+    min-width: 145px;
     &__invalid {
       color: red;
     }
@@ -82,6 +82,7 @@ $item-border-color: #e0e0e0;
     font-weight: 500;
     line-height: 1.5;
     height: 24px;
+    max-width: calc(100% - 145px);
   }
 
   &--date-input {
