--- a/src/app/fyle/my-add-edit-trip/other-requests/other-requests.component.scss
+++ b/src/app/fyle/my-add-edit-trip/other-requests/other-requests.component.scss
@@ -53,7 +53,7 @@
     line-height: 2;
     white-space: nowrap;
     display: flex;
-    min-width: 120px;
+    min-width: 145px;
     &__invalid {
       color: red;
     }
@@ -71,6 +71,7 @@
     font-weight: 500;
     line-height: 1.5;
     height: 24px;
+    max-width: calc(100% - 145px);
   }
 
   &--date-input {
